add title on pages

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
       crossorigin="anonymous"
     ></script>
     <link id="style" rel="stylesheet" type="text/css" href="src/style.css" />
+    <title>Portfolio of Viktoriia Skakovska - font-end developer from Ukraine</title>
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="index.html">Viktoriia Skakovska</a>
+            <a class="navbar-brand" href="index.html" title="Homepage">Viktoriia Skakovska</a>
             <button
             class="navbar-toggler"
             type="button"
@@ -40,19 +41,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://yuioze.csb.app/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="https://yuioze.csb.app/index.html" title="Homepage">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about-contact-page.html">About me</a>
+                  <a class="nav-link" href="about-contact-page.html" title="About Viktoriia Skakovska">About me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about-contact-page.html#contact">Contact me</a>
+                  <a class="nav-link" href="about-contact-page.html#contact" title="Contact Viktoriia Skakovska">Contact me</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
-      
     <h1 class="text-center mt-3">
       👋Hi, i am
     </h1>
@@ -65,14 +65,15 @@
     <div class="contact-about">
         <a
           href="about-contact-page.html#contact"
-          class="link-primary"
+          class="link-primary" 
+          title="Contact Viktoriia Skakovska"
           >Contact me</a
         >
         <a href="about-contact-page.html" class="link-secondary"
+        title="About Viktoriia Skakovska"
           >About me</a
         >
       </div>
-    </div>
     <div class="container mt-5 mb-5">
       <div class="row p-4">
         <div class="col-md-6">
@@ -86,7 +87,6 @@
           <h1 class="mb-3 text-dark">
             Yoga app
           </h1>
-         </br>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -101,13 +101,11 @@
               >
             </div>
          </div>
-        </div>
          <div class="row p-4">
          <div class="col-md-6">
             <h1 class="mb-3 text-dark">
                 Weather app
               </h1>
-            </br>
             <p class="text-dark">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
               quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -136,7 +134,6 @@
              <h1 class="mb-3 text-dark text-dark">
                Yougurt app
              </h1>
-            </br>
             <p class="text-dark">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
                 quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -152,5 +149,5 @@
           </div>
          </div>
      </div>
-  </body>
+</body>
 </html>
