--- a/about-contact-page.html.html
+++ b/about-contact-page.html.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="description"
+      content="About me-Viktoriia Skakovska"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +59,6 @@
     <h3 class="text-center">
       Front-end developer from Ukraine. Now in Poland, Warsaw.
     </h3>
-  </br>
     <p class="text-center">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
     </p>
