changes in pages index/contact - HEAD

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="description"
+      content="Viktoriia Skakovska is a front-end developer based in Europe, check out her projects and contact her for job inquiries"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>
+      Portfolio of Viktoriia Skakovska - font-end developer from Ukraine
+    </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -21,59 +29,74 @@
       crossorigin="anonymous"
     ></script>
     <link id="style" rel="stylesheet" type="text/css" href="src/style.css" />
-    <title>Portfolio of Viktoriia Skakovska - font-end developer from Ukraine</title>
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="index.html" title="Homepage">Viktoriia Skakovska</a>
-            <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://yuioze.csb.app/index.html" title="Homepage">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about-contact-page.html" title="About Viktoriia Skakovska">About me</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about-contact-page.html#contact" title="Contact Viktoriia Skakovska">Contact me</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    <h1 class="text-center mt-3">
-      👋Hi, i am
-    </h1>
-    <h2 class="text-center fw-bold">
-      Viktoria Skakovska👩🏻
-    </h2>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Viktoriia Skakovska</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="https://yuioze.csb.app/index.html"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="about-contact-page.html"
+                title="About Viktoriia Skakovska"
+                >About me</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="about-contact-page.html#contact"
+                title="Contact Viktoriia Skakovska"
+                >Contact me</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1 class="text-center mt-3">👋Hi, i am</h1>
+    <h2 class="text-center fw-bold">Viktoria Skakovska👩🏻</h2>
     <h3 class="text-center">
       Front-end developer from Ukraine, based in Europe
     </h3>
     <div class="contact-about">
-        <a
-          href="about-contact-page.html#contact"
-          class="link-primary" 
-          title="Contact Viktoriia Skakovska"
-          >Contact me</a
-        >
-        <a href="about-contact-page.html" class="link-secondary"
+      <a
+        href="about-contact-page.html#contact"
+        class="link-primary"
+        title="Contact Viktoriia Skakovska"
+        >Contact me</a
+      >
+      <a
+        href="about-contact-page.html"
+        class="link-secondary"
         title="About Viktoriia Skakovska"
-          >About me</a
-        >
-      </div>
+        >About me</a
+      >
+    </div>
     <div class="container mt-5 mb-5">
       <div class="row p-4">
         <div class="col-md-6">
@@ -84,9 +107,7 @@
           />
         </div>
         <div class="col-md-6">
-          <h1 class="mb-3 text-dark">
-            Yoga app
-          </h1>
+          <h1 class="mb-3 text-dark">Yoga app</h1>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -94,60 +115,57 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 p-0">
-              <a
-                href="#"
-                class="link-primary"
-                >Launch Yoga App</a
-              >
-            </div>
-         </div>
-         <div class="row p-4">
-         <div class="col-md-6">
-            <h1 class="mb-3 text-dark">
-                Weather app
-              </h1>
+            <a href="#" class="link-primary">Launch Yoga App</a>
+          </div>
+        </div>
+        <div class="row p-4">
+          <div class="col-md-6">
+            <h1 class="mb-3 text-dark">Weather app</h1>
             <p class="text-dark">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
             </p>
             <div class="app-link mt-5 mb-5">
-                <a
-                  href="#"
-                  class="link-primary"
-                  target="blank"
-                  >Launch Weather App</a
-                >
-              </div>
-         </div>
-            <div class="col-md-6">
-              <img src="images/weather.png" alt="weather-project-picture" class="img-fluid rounded">
+              <a href="#" class="link-primary" target="blank"
+                >Launch Weather App</a
+              >
             </div>
-         </div>
-
-         <div class="row p-4">
-           <div class="col-md-6 ">
-              <img src="images/yogurt.png" alt="yogurt-project-picture" class="img-fluid rounded">
-           </div>
-            <div class="col-md-6">
-             <h1 class="mb-3 text-dark text-dark">
-               Yougurt app
-             </h1>
-            <p class="text-dark">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-                eos eveniet alias temporibus deserunt veritatis minima fugiat
-                explicabo eum dolore.
-            </p>
-            <div class="app-link mt-5">
-              <a href="#"
-              class="link-primary"
-              target="blank">
-              Launch Yougurt App </a>
-             </div>
           </div>
-         </div>
-     </div>
-</body>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/weather.png"
+            alt="weather-project-picture"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
+
+      <div class="row p-4">
+        <div class="col-md-6">
+          <img
+            src="images/yogurt.png"
+            alt="yogurt-project-picture"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col-md-6">
+          <h1 class="mb-3 text-dark text-dark">Yougurt app</h1>
+          <p class="text-dark">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="app-link mt-5">
+            <a href="#" class="link-primary" target="blank">
+              Launch Yougurt App
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
