--- a/about-contact-page.html
+++ b/about-contact-page.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta
-      name="description"
-      content="About me-Viktoriia Skakovska"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <meta
+      name="description"
+      content="About Viktoriia Skakovska, a front-end developer based in Europe"
+    />
+    <title>About me - Viktoriia Skakovska</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -27,40 +35,47 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">Viktoriia Skakovska</a>
         <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="https://yuioze.csb.app/index.html">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="https://yuioze.csb.app/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about-contact-page.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-contact-page.html#contact">Contact me</a>
+              <a class="nav-link" href="about-contact-page.html#contact"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-    <h2 class="text-center">
-      About me
-    </h2>
+    <h1 class="text-center">About me</h1>
     <h3 class="text-center">
       Front-end developer from Ukraine. Now in Poland, Warsaw.
     </h3>
     <p class="text-center">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.
     </p>
     <div class="container">
       <div class="row">
@@ -75,9 +90,14 @@
         </div>
       </div>
     </div>
-    <div class="contact-me fw-bold m-5" id="contact">Contact me
-    <div class="email-contact"><a href="mailto:viktoriia.skakovska@gmail.com" class=
-      "contact-link">viktoriia.skakovska@gmail.com</a> </div>
-    <div class="contact-me-icon" >📩</div>
+    <div class="contact-me fw-bold m-5" id="contact">
+      Contact me
+      <div class="email-contact">
+        <a href="mailto:viktoriia.skakovska@gmail.com" class="contact-link"
+          >viktoriia.skakovska@gmail.com</a
+        >
+      </div>
+      <div class="contact-me-icon">📩</div>
+    </div>
   </body>
 </html>
