--- a/contact-page.html
+++ b/contact-page.html
@@ -56,10 +56,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-contact-page.html">About me</a>
+              <a class="nav-link" href="contact-page.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-contact-page.html#contact"
+              <a class="nav-link" href="contact-page.html#contact"
                 >Contact me</a
               >
             </li>
