--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Viktoriia Skakovska is a front-end developer based in Europe, check out her projects and contact her for job inquiries"
-    />
     <title>
-      Portfolio of Viktoriia Skakovska - font-end developer from Ukraine
+      Portfolio of Viktoriia SKakovska - font-end developer from Ukraine, based
+      in Europe
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -61,7 +58,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about-contact-page.html"
+                href="contact-page.html"
                 title="About Viktoriia Skakovska"
                 >About me</a
               >
@@ -69,7 +66,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about-contact-page.html#contact"
+                href="contact-page.html#contact"
                 title="Contact Viktoriia Skakovska"
                 >Contact me</a
               >
@@ -85,87 +82,18 @@
     </h3>
     <div class="contact-about">
       <a
-        href="about-contact-page.html#contact"
+        href="contact-page.html#contact"
         class="link-primary"
         title="Contact Viktoriia Skakovska"
         >Contact me</a
       >
       <a
-        href="about-contact-page.html"
+        href="contact-page.html"
         class="link-secondary"
         title="About Viktoriia Skakovska"
         >About me</a
       >
     </div>
-    <div class="container mt-5 mb-5">
-      <div class="row p-4">
-        <div class="col-md-6">
-          <img
-            src="images/yoga.png"
-            alt="yoga-project-picture"
-            class="img-fluid rounded"
-          />
-        </div>
-        <div class="col-md-6">
-          <h1 class="mb-3 text-dark">Yoga app</h1>
-          <p class="text-dark">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="app-link mt-5 p-0">
-            <a href="#" class="link-primary">Launch Yoga App</a>
-          </div>
-        </div>
-        <div class="row p-4">
-          <div class="col-md-6">
-            <h1 class="mb-3 text-dark">Weather app</h1>
-            <p class="text-dark">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <div class="app-link mt-5 mb-5">
-              <a href="#" class="link-primary" target="blank"
-                >Launch Weather App</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <img
-            src="images/weather.png"
-            alt="weather-project-picture"
-            class="img-fluid rounded"
-          />
-        </div>
-      </div>
-
-      <div class="row p-4">
-        <div class="col-md-6">
-          <img
-            src="images/yogurt.png"
-            alt="yogurt-project-picture"
-            class="img-fluid rounded"
-          />
-        </div>
-        <div class="col-md-6">
-          <h1 class="mb-3 text-dark text-dark">Yougurt app</h1>
-          <p class="text-dark">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="app-link mt-5">
-            <a href="#" class="link-primary" target="blank">
-              Launch Yougurt App
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="conteiner m-5"></div>
   </body>
 </html>
