changes on INDEX and CONTACT

--- a/contact-page.html
+++ b/contact-page.html
@@ -33,7 +33,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Viktoriia Skakovska</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Viktoriia Skakovska</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -51,15 +53,24 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="https://yuioze.csb.app/index.html"
+                href="index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact-page.html">About me</a>
+              <a
+                class="nav-link"
+                href="contact-page.html"
+                title="About Viktoriia Skakovska"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact-page.html#contact"
+              <a
+                class="nav-link"
+                href="contact-page.html#contact"
+                title="Contact Viktoriia Skakovska"
                 >Contact me</a
               >
             </li>
@@ -93,7 +104,10 @@
     <div class="contact-me fw-bold m-5" id="contact">
       Contact me
       <div class="email-contact">
-        <a href="mailto:viktoriia.skakovska@gmail.com" class="contact-link"
+        <a
+          href="mailto:viktoriia.skakovska@gmail.com"
+          class="contact-link"
+          title="Contact Viktoriia Skakovska"
           >viktoriia.skakovska@gmail.com</a
         >
       </div>
