--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="https://yuioze.csb.app/index.html"
+                href="index.html"
                 title="Homepage"
                 >Home</a
               >
@@ -94,6 +94,74 @@
         >About me</a
       >
     </div>
-    <div class="conteiner m-5"></div>
+    <div class="conteiner m-5">
+      <div class="row p-4">
+        <div class="col-md-6">
+          <img
+            src="images/yoga.png"
+            alt="yoga-project-picture"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col-md-6">
+          <h1 class="mb-3 text-dark">Yoga app</h1>
+          <p class="text-dark">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="app-link mt-5">
+            <a href="#" class="link-primary">Launch Yoga App</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row p-4">
+        <div class="col-md-6">
+          <h1 class="mb-3 text-dark">Weather app</h1>
+          <p class="text-dark">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="app-link mt-5">
+            <a href="#" class="link-primary">Launch Weather App</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/weather.png"
+            alt="weather-project-picture"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
+
+      <div class="row p-4">
+        <div class="col-md-6">
+          <img
+            src="images/yogurt.png"
+            alt="yogurt-project-picture"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col-md-6">
+          <h1 class="mb-3 text-dark">Yougurt app</h1>
+          <p class="text-dark">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="app-link mt-5">
+            <a href="#" class="link-primary" target="blank">
+              Launch Yougurt App
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
