changed @media for mobile devices

--- a/contact-page.html
+++ b/contact-page.html
@@ -78,11 +78,11 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
-    <h3 class="text-center">
-      Front-end developer from Ukraine. Now in Poland, Warsaw.
+    <h2 class="text-center">About me</h2>
+    <h3 class="text-center m-3">
+      Front-end developer, based in Europe
     </h3>
-    <p class="text-center">
+    <p class="text-center m-4">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
       provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
       veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
@@ -91,17 +91,26 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid img-on-contact-page p-3 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid img-on-contact-page p-3 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid img-on-contact-page p-3 shadow rounded"
+          />
         </div>
       </div>
     </div>
-    <div class="contact-me fw-bold m-5" id="contact">
+    <div class="contact-me fw-bold" id="contact">
       Contact me
       <div class="email-contact">
         <a
@@ -111,7 +120,7 @@
           >viktoriia.skakovska@gmail.com</a
         >
       </div>
-      <div class="contact-me-icon">📩</div>
+      <div class="contact-me-icon mb-5">📩</div>
     </div>
   </body>
 </html>
