--- a/index.html
+++ b/index.html
@@ -94,24 +94,24 @@
         >About me</a
       >
     </div>
-    <div class="conteiner m-5">
+    <div class="container mt-5 mb-5">
       <div class="row p-4">
         <div class="col-md-6">
           <img
             src="images/yoga.png"
             alt="yoga-project-picture"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
-          <h1 class="mb-3 text-dark">Yoga app</h1>
+          <h1 class="mb-3">Yoga app</h1>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="app-link mt-5">
+          <div class="app-link mt-5 mb-3">
             <a href="#" class="link-primary">Launch Yoga App</a>
           </div>
         </div>
@@ -119,7 +119,7 @@
 
       <div class="row p-4">
         <div class="col-md-6">
-          <h1 class="mb-3 text-dark">Weather app</h1>
+          <h1 class="mb-3">Weather app</h1>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -130,11 +130,11 @@
             <a href="#" class="link-primary">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
           <img
             src="images/weather.png"
             alt="weather-project-picture"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
@@ -144,18 +144,18 @@
           <img
             src="images/yogurt.png"
             alt="yogurt-project-picture"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
-          <h1 class="mb-3 text-dark">Yougurt app</h1>
+          <h1 class="mb-3">Yougurt app</h1>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="app-link mt-5">
+          <div class="app-link mt-5 mb-3">
             <a href="#" class="link-primary" target="blank">
               Launch Yougurt App
             </a>
