add MEDIA for landscape ?

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="app-link mt-5">
+          <div class="app-link mt-5 mb-3">
             <a href="#" class="link-primary">Launch Weather App</a>
           </div>
         </div>
@@ -134,7 +134,7 @@
           <img
             src="images/weather.png"
             alt="weather-project-picture"
-            class="img-fluid rounded d-none d-sm-block"
+            class="img-fluid rounded d-none d-sm-block mt-3"
           />
         </div>
       </div>
