--- a/contact-page.html
+++ b/contact-page.html
@@ -17,6 +17,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -47,7 +53,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
@@ -79,9 +88,7 @@
       </div>
     </nav>
     <h2 class="text-center">About me</h2>
-    <h3 class="text-center m-3">
-      Front-end developer, based in Europe
-    </h3>
+    <h3 class="text-center m-3">Front-end developer, based in Europe</h3>
     <p class="text-center m-4">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
       provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
