--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -34,7 +40,7 @@
     <link id="style" rel="stylesheet" type="text/css" href="src/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
           >Viktoriia Skakovska</a
@@ -84,26 +90,27 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center mt-3">👋Hi, i am</h1>
-    <h2 class="text-center fw-bold">Viktoria Skakovska👩🏻</h2>
-    <h3 class="text-center">
-      Front-end developer from Ukraine, based in Europe
-    </h3>
-    <div class="contact-about">
-      <a
-        href="contact-page.html#contact"
-        class="link-primary"
-        title="Contact Viktoriia Skakovska"
-        >Contact me</a
-      >
-      <a
-        href="contact-page.html"
-        class="link-secondary"
-        title="About Viktoriia Skakovska"
-        >About me</a
-      >
+    <div class="backgroung-heading">
+      <h1 class="text-center text-uppercase">Viktoria Skakovska</h1>
+      <h3 class="text-center mt-5">
+        Front-end developer from Ukraine, based in Warsaw
+      </h3>
+      <div class="contact-about mt-5">
+        <a
+          href="contact-page.html#contact"
+          class="link-primary text-uppercase"
+          title="Contact Viktoriia Skakovska"
+          >Contact me</a
+        >
+        <a
+          href="contact-page.html"
+          class="link-secondary text-uppercase"
+          title="About Viktoriia Skakovska"
+          >About me</a
+        >
+      </div>
     </div>
-    <div class="container mt-5 mb-5">
+    <div class="container mb-5">
       <div class="row p-4">
         <div class="col-md-6">
           <img
@@ -113,7 +120,7 @@
           />
         </div>
         <div class="col-md-6">
-          <h1 class="mb-3">Yoga app</h1>
+          <h4 class="mb-3">Yoga app</h4>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -128,7 +135,7 @@
 
       <div class="row p-4">
         <div class="col-md-6">
-          <h1 class="mb-3">Weather app</h1>
+          <h4 class="mb-3">Weather app</h4>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -157,7 +164,7 @@
           />
         </div>
         <div class="col-md-6">
-          <h1 class="mb-3">Yougurt app</h1>
+          <h4 class="mb-3">Yougurt app</h4>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
