--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
-          >Viktoriia Skakovska</a
-        >
+          ><img src="images/logo3.png" class="img-fluid"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -90,7 +90,7 @@
         </div>
       </div>
     </nav>
-    <div class="backgroung-heading">
+    <div class="hero">
       <h1 class="text-center text-uppercase">Viktoria Skakovska</h1>
       <h3 class="text-center mt-5">
         Front-end developer from Ukraine, based in Warsaw
