--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     </nav>
     <div class="hero">
       <h1 class="text-center text-uppercase">Viktoria Skakovska</h1>
-      <h3 class="text-center mt-5">
+      <h2 class="text-center mt-5">
         Front-end developer from Ukraine, based in Warsaw
-      </h3>
+      </h2>
       <div class="contact-about mt-5">
         <a
           href="contact-page.html#contact"
@@ -104,7 +104,7 @@
         >
         <a
           href="contact-page.html"
-          class="link-secondary text-uppercase"
+          class="link-primary text-uppercase"
           title="About Viktoriia Skakovska"
           >About me</a
         >
@@ -120,7 +120,7 @@
           />
         </div>
         <div class="col-md-6">
-          <h4 class="mb-3">Yoga app</h4>
+          <h3 class="mb-3">Yoga app</h3>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -128,14 +128,14 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-primary">Launch Yoga App</a>
+            <a href="#" class="link-secondary">Launch Yoga App</a>
           </div>
         </div>
       </div>
 
       <div class="row p-4">
         <div class="col-md-6">
-          <h4 class="mb-3">Weather app</h4>
+          <h3 class="mb-3">Weather app</h3>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -143,7 +143,7 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-primary">Launch Weather App</a>
+            <a href="#" class="link-secondary">Launch Weather App</a>
           </div>
         </div>
         <div class="col-md-6 mb-3">
@@ -164,7 +164,7 @@
           />
         </div>
         <div class="col-md-6">
-          <h4 class="mb-3">Yougurt app</h4>
+          <h3 class="mb-3">Yougurt app</h3>
           <p class="text-dark">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -172,7 +172,7 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-primary" target="blank">
+            <a href="#" class="link-secondary" target="blank">
               Launch Yougurt App
             </a>
           </div>
