--- a/index.html
+++ b/index.html
@@ -179,5 +179,27 @@
         </div>
       </div>
     </div>
+    <footer class="text-center m-4">
+      <div class="social-links d-flex justify-content-center">
+        <a href="#" class=""
+          ><img
+            src="images/linkedin1.png"
+            alt="My page - linkedIn"
+            class="footer-img m-4"
+        /></a>
+        <a href="#" class=""
+          ><img
+            src="images/email1.png"
+            alt="Contact me - email"
+            class="footer-img m-4"
+        /></a>
+        <a href="#" class=""
+          ><img
+            src="images/insta.png"
+            alt="My page - istagram"
+            class="footer-img m-4"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
