--- a/contact-copy.html
+++ b/contact-copy.html
@@ -65,7 +65,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 aria-current="page"
                 href="index.html"
                 title="Homepage"
@@ -74,7 +74,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 href="contact-page.html"
                 title="About Viktoriia Skakovska"
                 >About me</a
@@ -92,25 +92,14 @@
         </div>
       </div>
     </nav>
-    <div class="container-1 d-flex justify-content-center">
-      <div class="col-sm-4 text-right">
-        <img
-          src="images/me.jpg"
-          alt="photo Viktoria Skakovska"
-          class="img-photo img-fluid rounded"
-        />
-      </div>
-      <div class="col-sm-4">
-        <h1 class="text-uppercase">About me</h1>
-        <h2>Front-end developer, based in Europe</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-          blanditiis harum.
-        </p>
-      </div>
-    </div>
+    <h2 class="text-center">About me</h2>
+    <h3 class="text-center m-3">Front-end developer, based in Europe</h3>
+    <p class="text-center m-4">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.
+    </p>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
