contact-about page CSS

--- a/contact-page.html
+++ b/contact-page.html
@@ -84,7 +84,7 @@
               <a
                 class="nav-link"
                 href="contact-page.html#contact"
-                title="Contact Viktoriia Skakovska"
+                title="Contact Viktoriia"
                 >Contact me</a
               >
             </li>
@@ -93,14 +93,7 @@
       </div>
     </nav>
     <div class="container-1 d-flex justify-content-center">
-      <div class="col-sm-4 text-right">
-        <img
-          src="images/me.jpg"
-          alt="photo Viktoria Skakovska"
-          class="img-photo img-fluid rounded"
-        />
-      </div>
-      <div class="col-sm-4">
+      <div class="col-md-6">
         <h1 class="text-uppercase">About me</h1>
         <h2>Front-end developer, based in Europe</h2>
         <p>
@@ -109,8 +102,22 @@
           alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
           blanditiis harum.
         </p>
+        <a
+          href="contact-page.html"
+          class="link-works btn btn-works text-capitalize"
+          title="See project by Viktoriia"
+          >See my project</a
+        >
+      </div>
+      <div class="col-md-6 text-center">
+        <img
+          src="images/me.jpg"
+          alt="photo Viktoria"
+          class="img-photo img-fluid rounded"
+        />
       </div>
     </div>
+    <!--
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
@@ -133,7 +140,8 @@
         </div>
       </div>
     </div>
-    <div class="contact-me fw-bold" id="contact">
+    -->
+    <div class="contact-me text-uppercase text-center" id="contact">
       Contact me
       <div class="email-contact">
         <a
