css on @about-page @

--- a/contact-page.html
+++ b/contact-page.html
@@ -141,8 +141,8 @@
       </div>
     </div>
     -->
-    <div class="contact-me text-uppercase text-center" id="contact">
-      Contact me
+    <div class="contact-me text-center" id="contact">
+      <h3 class="text-capitalize">Contact me</h3>
       <div class="email-contact">
         <a
           href="mailto:viktoriia.skakovska@gmail.com"
