--- a/contact-page.html
+++ b/contact-page.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="description"
-      content="About Viktoriia Skakovska, a front-end developer based in Europe"
-    />
-    <title>About me - Viktoriia Skakovska</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Portfolio of Viktoriia SKakovska - font-end developer from Ukraine, based
+      in Europe
+    </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -92,29 +95,33 @@
         </div>
       </div>
     </nav>
-    <div class="container-1 d-flex justify-content-center">
-      <div class="col-md-6">
-        <h1 class="text-uppercase">About me</h1>
-        <h2>Front-end developer, based in Europe</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-          blanditiis harum.
-        </p>
-        <a
-          href="contact-page.html"
-          class="link-works btn btn-works text-capitalize"
-          title="See project by Viktoriia"
-          >See my project</a
-        >
-      </div>
-      <div class="col-md-6 text-center">
-        <img
-          src="images/me.jpg"
-          alt="photo Viktoria"
-          class="img-photo img-fluid rounded"
-        />
+    <div class="about-hero container d-flex justify-content-center">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="about-hero-content">
+            <h1 class="text-uppercase">About me</h1>
+            <h2>Front-end developer, based in Europe</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+              qui alias veniam excepturi rem dolor fugit dignissimos, sed
+              voluptatum blanditiis harum.
+            </p>
+            <a
+              href="contact-page.html"
+              class="link-works btn btn-works text-capitalize"
+              title="See project by Viktoriia"
+              >See my project</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/me.jpg"
+            alt="photo Viktoria"
+            class="img-fluid img-about-page"
+          />
+        </div>
       </div>
     </div>
     <!--
@@ -141,17 +148,33 @@
       </div>
     </div>
     -->
-    <div class="contact-me text-center" id="contact">
-      <h3 class="text-capitalize">Contact me</h3>
-      <div class="email-contact">
+    <footer>
+      <div
+        class="contact-box container d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p>Let's work together!</p>
+        </div>
+        <div class="contact-me" id="contact">
+          <a
+            href="mailto:viktoriia.skakovska@gmail.com"
+            class="btn btn-works text-capitalize"
+            title="Contact Viktoriia Skakovska"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="email-contact text-center">
         <a
           href="mailto:viktoriia.skakovska@gmail.com"
           class="contact-link"
           title="Contact Viktoriia Skakovska"
           >viktoriia.skakovska@gmail.com</a
         >
+
+        <div class="contact-me-icon mb-5">📩</div>
       </div>
-      <div class="contact-me-icon mb-5">📩</div>
-    </div>
+    </footer>
   </body>
 </html>
