--- a/contact-page.html
+++ b/contact-page.html
@@ -97,7 +97,7 @@
     </nav>
     <div class="about-hero container d-flex justify-content-center">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <div class="about-hero-content">
             <h1 class="text-uppercase">About me</h1>
             <h2>Front-end developer, based in Europe</h2>
@@ -115,7 +115,7 @@
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6 text-right">
           <img
             src="images/me.jpg"
             alt="photo Viktoria"
@@ -172,7 +172,6 @@
           title="Contact Viktoriia Skakovska"
           >viktoriia.skakovska@gmail.com</a
         >
-
         <div class="contact-me-icon mb-5">📩</div>
       </div>
     </footer>
