css about- work page

--- a/index.html
+++ b/index.html
@@ -75,15 +75,20 @@
                 class="nav-link"
                 href="contact-page.html"
                 title="About Viktoriia Skakovska"
-                >About me</a
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="work.html" title="Contact Viktoriia"
+                >Work</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
                 href="contact-page.html#contact"
-                title="Contact Viktoriia Skakovska"
-                >Contact me</a
+                title="Contact Viktoriia"
+                >Contact</a
               >
             </li>
           </ul>
