--- a/work.html
+++ b/work.html
@@ -77,13 +77,13 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 href="contact-page.html"
                 title="About Viktoriia Skakovska"
                 >About</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="work.html" title="Contact Viktoriia"
                 >Work</a
               >
@@ -100,86 +100,5 @@
         </div>
       </div>
     </nav>
-    <div class="about-hero container d-flex justify-content-center">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="about-hero-content">
-            <h1 class="text-uppercase">About me</h1>
-            <h2>Front-end developer, based in Europe</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-              qui alias veniam excepturi rem dolor fugit dignissimos, sed
-              voluptatum blanditiis harum.
-            </p>
-            <a
-              href="contact-page.html"
-              class="link-works btn btn-works text-capitalize"
-              title="See project by Viktoriia"
-              >See my project</a
-            >
-          </div>
-        </div>
-        <div class="col-lg-6 text-right">
-          <img
-            src="images/me.jpg"
-            alt="photo Viktoria"
-            class="img-fluid img-about-page"
-          />
-        </div>
-      </div>
-    </div>
-    <!--
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/yoga.png"
-            class="img-fluid img-on-contact-page p-3 shadow rounded"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images/weather.png"
-            class="img-fluid img-on-contact-page p-3 shadow rounded"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images/yogurt.png"
-            class="img-fluid img-on-contact-page p-3 shadow rounded"
-          />
-        </div>
-      </div>
-    </div>
-    -->
-    <footer>
-      <div class="contact-box container justify-content-between mb-5 d-md-flex">
-        <div>
-          <h3>Work Inquiry</h3>
-          <p>Let's work together!</p>
-        </div>
-        <div>
-          <a
-            href="mailto:viktoriia.skakovska@gmail.com"
-            class="btn btn-works text-capitalize"
-            title="Contact Viktoriia Skakovska"
-            >Contact me</a
-          >
-        </div>
-      </div>
-      <div class="contact-me-icon d-flex justify-content-center mt-3">📩</div>
-      <div
-        class="email-contact d-flex justify-content-center mb-5"
-        id="contact"
-      >
-        <a
-          href="mailto:viktoriia.skakovska@gmail.com"
-          class="contact-link"
-          title="Contact Viktoriia Skakovska"
-          >viktoriia.skakovska@gmail.com</a
-        >
-      </div>
-    </footer>
   </body>
 </html>
