add work - page and css style-work-file

--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
       id="style"
       rel="stylesheet"
       type="text/css"
-      href="src/style-about-page.css"
+      href="src/style-work-page.css"
     />
   </head>
   <body>
@@ -100,5 +100,7 @@
         </div>
       </div>
     </nav>
+
+    
   </body>
 </html>
