--- a/contact-page.html
+++ b/contact-page.html
@@ -41,10 +41,10 @@
       id="style"
       rel="stylesheet"
       type="text/css"
-      href="src/style-about-page.css"
+      href="src/style-all-page.css"
     />
   </head>
-  <body>
+  <body class="page-about">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
@@ -100,13 +100,13 @@
         </div>
       </div>
     </nav>
-    <div class="about-hero container d-flex justify-content-center">
+    <div class="content-container container d-flex justify-content-center">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-hero-content">
+          <div class="content">
             <h1 class="text-uppercase">About me</h1>
             <h2>Front-end developer, based in Europe</h2>
-            <p>
+            <p class="mt-4">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
               aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
               qui alias veniam excepturi rem dolor fugit dignissimos, sed
@@ -156,7 +156,7 @@
     <footer>
       <div class="contact-box container justify-content-between mb-5 d-md-flex">
         <div>
-          <h3>Work Inquiry</h3>
+          <h4>Work Inquiry</h4>
           <p>Let's work together!</p>
         </div>
         <div>
