--- a/work.html
+++ b/work.html
@@ -41,10 +41,10 @@
       id="style"
       rel="stylesheet"
       type="text/css"
-      href="src/style-work-page.css"
+      href="src/style-all-page.css"
     />
   </head>
-  <body>
+  <body class="page-work">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
@@ -101,6 +101,72 @@
       </div>
     </nav>
 
-    
+    <div class="content-container container text-center">
+      <div class="content">
+        <h1 class="work-page mb-5">
+          Take a look at what I've been working on!
+        </h1>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="images/yogurt.png"
+              class="img-fluid mb-4 rounded"
+              alt="My yougurt project"
+            />
+            <h3 class="work-page">Yougurt project</h3>
+            <p>Built with HTML and CSS</p>
+          </div>
+          <div class="col-6">
+            <img
+              src="images/weather.png"
+              class="img-fluid mb-4 rounded"
+              alt="My yougurt project"
+            />
+            <h3 class="work-page">Weather project</h3>
+            <p>Built with HTML, CSS and JavaScript</p>
+          </div>
+          <div class="col-6">
+            <img
+              src="images/dictionary.png"
+              class="img-fluid mb-4 rounded"
+              alt="My yougurt project"
+            />
+            <h3 class="work-page">Dictionary App</h3>
+            <p>Built with HTML, CSS with React</p>
+          </div>
+          <div class="col-6">
+            <img
+              src="images/trans.png"
+              class="img-fluid mb-4 rounded"
+              alt="My yougurt project"
+            />
+            <h3 class="work-page">Translation App</h3>
+            <p>Built with HTML, CSS with React</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="text-center">
+      <div class="social-links d-flex justify-content-center">
+        <a href="#" class=""
+          ><img
+            src="images/linkedin1.png"
+            alt="My page - linkedIn"
+            class="footer-img m-4"
+        /></a>
+        <a href="#" class=""
+          ><img
+            src="images/email1.png"
+            alt="Contact me - email"
+            class="footer-img m-4"
+        /></a>
+        <a href="#" class=""
+          ><img
+            src="images/insta.png"
+            alt="My page - istagram"
+            class="footer-img m-4"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
