change name of page.html

--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="contact-page.html"
+                href="about-page.html"
                 title="About Viktoriia Skakovska"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="Contact Viktoriia"
+              <a
+                class="nav-link"
+                href="work-page.html"
+                title="Contact Viktoriia"
                 >Work</a
               >
             </li>
