--- a/work-page.html
+++ b/work-page.html
@@ -77,14 +77,17 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
-                href="contact-page.html"
+                class="nav-link active"
+                href="about-page.html"
                 title="About Viktoriia Skakovska"
                 >About</a
               >
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="work.html" title="Contact Viktoriia"
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="work-page.html"
+                title="Contact Viktoriia"
                 >Work</a
               >
             </li>
