created new page - contact.html and updated FOOTER

--- a/index.html
+++ b/index.html
@@ -187,25 +187,25 @@
         </div>
       </div>
     </div>
-    <footer class="text-center m-4">
-      <div class="social-links d-flex justify-content-center">
-        <a href="#" class=""
+    <footer class="mb-5">
+      <div class="social-links d-flex justify-content-center text-center">
+        <a href="#" class="" target="_blank"
           ><img
             src="images/linkedin1.png"
             alt="My page - linkedIn"
-            class="footer-img m-4"
+            class="footer-img"
         /></a>
-        <a href="#" class=""
+        <a href="#" class="" target="_blank"
           ><img
             src="images/email1.png"
             alt="Contact me - email"
-            class="footer-img m-4"
+            class="footer-img"
         /></a>
-        <a href="#" class=""
+        <a href="#" class="" target="_blank"
           ><img
             src="images/insta.png"
             alt="My page - istagram"
-            class="footer-img m-4"
+            class="footer-img"
         /></a>
       </div>
     </footer>
