--- a/work-page.html
+++ b/work-page.html
@@ -77,7 +77,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 href="about-page.html"
                 title="About Viktoriia Skakovska"
                 >About</a
@@ -85,7 +85,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 href="work-page.html"
                 title="Contact Viktoriia"
                 >Work</a
@@ -106,7 +106,7 @@
 
     <div class="content-container container text-center">
       <div class="content">
-        <h1 class="work-page mb-5">
+        <h1 class="work-page mb-5 text-uppercase">
           Take a look at what I've been working on!
         </h1>
         <div class="row">
@@ -149,25 +149,25 @@
         </div>
       </div>
     </div>
-    <footer class="text-center">
-      <div class="social-links d-flex justify-content-center">
-        <a href="#" class=""
+    <footer class="mb-5">
+      <div class="social-links d-flex justify-content-center text-center">
+        <a href="#" class="" target="_blank"
           ><img
             src="images/linkedin1.png"
             alt="My page - linkedIn"
-            class="footer-img m-4"
+            class="footer-img"
         /></a>
-        <a href="#" class=""
+        <a href="#" class="" target="_blank"
           ><img
             src="images/email1.png"
             alt="Contact me - email"
-            class="footer-img m-4"
+            class="footer-img"
         /></a>
-        <a href="#" class=""
+        <a href="#" class="" target="_blank"
           ><img
             src="images/insta.png"
             alt="My page - istagram"
-            class="footer-img m-4"
+            class="footer-img"
         /></a>
       </div>
     </footer>
