--- a/about-page.html
+++ b/about-page.html
@@ -156,7 +156,7 @@
       </div>
     </div>
     -->
-    <footer>
+    <footer class="mb-5">
       <div class="contact-box container justify-content-between mb-5 d-md-flex">
         <div>
           <h4>Work Inquiry</h4>
@@ -182,6 +182,26 @@
           title="Contact Viktoriia Skakovska"
           >viktoriia.skakovska@gmail.com</a
         >
+      </div>
+      <div class="social-links d-flex justify-content-center text-center">
+        <a href="#" class="" target="_blank"
+          ><img
+            src="images/linkedin1.png"
+            alt="My page - linkedIn"
+            class="footer-img"
+        /></a>
+        <a href="#" class="" target="_blank"
+          ><img
+            src="images/email1.png"
+            alt="Contact me - email"
+            class="footer-img"
+        /></a>
+        <a href="#" class="" target="_blank"
+          ><img
+            src="images/insta.png"
+            alt="My page - istagram"
+            class="footer-img"
+        /></a>
       </div>
     </footer>
   </body>
