Added logo on pages

--- a/about-page.html
+++ b/about-page.html
@@ -48,8 +48,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
-          >Viktoriia Skakovska</a
-        >
+          ><img src="images/logo3.png" class="img-fluid"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
