--- a/work-page.html
+++ b/work-page.html
@@ -106,7 +106,7 @@
 
     <div class="content-container container text-center">
       <div class="content">
-        <h1 class="work-page mb-5 text-uppercase">
+        <h1 class="work-page mb-5 text-uppercase text-left">
           Take a look at what I've been working on!
         </h1>
         <div class="row">
