--- a/contact-page.html
+++ b/contact-page.html
@@ -104,7 +104,7 @@
       </div>
     </nav>
 
-    <div class="content-container container text-left">
+    <div class="content-container container">
       <div class="content">
         <h1 class="contact-page text-uppercase">Let's get in touch!</h1>
         <h3 class="work-page">Email</h3>
