--- a/work-page.html
+++ b/work-page.html
@@ -104,12 +104,12 @@
       </div>
     </nav>
 
-    <div class="content-container container text-center">
+    <div class="content-container container">
       <div class="content">
-        <h1 class="work-page mb-5 text-uppercase text-left">
+        <h1 class="work-page mb-5 text-uppercase">
           Take a look at what I've been working on!
         </h1>
-        <div class="row">
+        <div class="row text-center">
           <div class="col-6">
             <img
               src="images/yogurt.png"
