--- a/contact-page.html
+++ b/contact-page.html
@@ -134,7 +134,7 @@
             href="mailto:viktoriia.skakovska@gmail.com"
             class="btn btn-works text-capitalize"
             title="Contact Viktoriia Skakovska"
-            >Contact me</a
+            >Let`s talk here</a
           >
         </div>
       </div>
