updated about and contact page

--- a/about-page.html
+++ b/about-page.html
@@ -165,7 +165,7 @@
         <div>
           <a
             href="mailto:viktoriia.skakovska@gmail.com"
-            class="btn btn-works text-capitalize"
+            class="btn btn-works"
             title="Contact Viktoriia Skakovska"
             >Contact me</a
           >
