--- a/contact-page.html
+++ b/contact-page.html
@@ -132,7 +132,7 @@
         <div>
           <a
             href="mailto:viktoriia.skakovska@gmail.com"
-            class="btn btn-works text-capitalize"
+            class="btn btn-works"
             title="Contact Viktoriia Skakovska"
             >Let`s talk here</a
           >
