--- a/about-page.html
+++ b/about-page.html
@@ -117,7 +117,7 @@
             </p>
             <a
               href="contact-page.html"
-              class="link-works btn btn-works text-capitalize"
+              class="link-works btn btn-works"
               title="See project by Viktoriia"
               >See my project</a
             >
