--- a/index.html
+++ b/index.html
@@ -99,20 +99,20 @@
       </div>
     </nav>
     <div class="hero">
-      <h1 class="text-center text-uppercase">Viktoria Skakovska</h1>
+      <h1 class="text-center">Viktoria Skakovska</h1>
       <h2 class="text-center mt-5">
         Front-end developer from Ukraine, based in Warsaw
       </h2>
       <div class="contact-about mt-5">
         <a
           href="contact-page.html#contact"
-          class="link-primary text-uppercase"
+          class="link-primary"
           title="Contact Viktoriia Skakovska"
           >Contact me</a
         >
         <a
           href="contact-page.html"
-          class="link-primary text-uppercase"
+          class="link-primary"
           title="About Viktoriia Skakovska"
           >About me</a
         >
