--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary">Launch Yoga App</a>
+            <a href="#" class="link-secondary">Launch yoga app</a>
           </div>
         </div>
       </div>
@@ -151,7 +151,7 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary">Launch Weather App</a>
+            <a href="#" class="link-secondary">Launch weather app</a>
           </div>
         </div>
         <div class="col-md-6 mb-3">
@@ -181,7 +181,7 @@
           </p>
           <div class="app-link mt-5 mb-3">
             <a href="#" class="link-secondary" target="blank">
-              Launch Yougurt App
+              Launch yougurt app
             </a>
           </div>
         </div>
