--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <h2 class="text-center mt-5">
         Front-end developer from Ukraine, based in Warsaw
       </h2>
-      <div class="contact-about mt-5">
+      <div class="contact-about mt-5 text-uppercase">
         <a
           href="contact-page.html#contact"
           class="link-primary"
