--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
     </nav>
     <div class="hero">
-      <h1 class="text-center">Viktoria Skakovska</h1>
+      <h1 class="text-center text-uppercase">Viktoria Skakovska</h1>
       <h2 class="text-center mt-5">
         Front-end developer from Ukraine, based in Warsaw
       </h2>
