--- a/contact-page.html
+++ b/contact-page.html
@@ -109,7 +109,13 @@
         <h1 class="contact-page text-uppercase">Let's get in touch!</h1>
         <h3 class="work-page">Email</h3>
         <p class="contact-page">
-          <a href="#" target="_blank">viktoriia.skakovska@gmail.com</a>
+          <a
+            href="mailto:viktoriia.skakovska@gmail.com"
+            class=""
+            title="Contact Viktoriia Skakovska"
+            target="_blank"
+            >viktoriia.skakovska@gmail.com</a
+          >
         </p>
         <h3 class="work-page">LinkdIn</h3>
         <p class="contact-page">
